--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Feryllia",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
