--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,15 @@ tmp/
 temp/
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,node
+
+
+# Created by https://www.toptal.com/developers/gitignore/api/sass
+# Edit at https://www.toptal.com/developers/gitignore?templates=sass
+
+### Sass ###
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+
+# End of https://www.toptal.com/developers/gitignore/api/sass
