--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node ./bin/www"
   },
   "author": "Feryllia",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "node-sass-middleware": "^0.11.0",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "http-errors": "^1.8.0"
   }
 }
